# fake-news-detector

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  test_prediction.py
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/ai_hype/reports/: evaluation_metrics_ai_hype.json  training_metrics.json
artifacts/campus_rumor/reports/: evaluation_metrics_campus_rumor.json  training_metrics.json
artifacts/celebrity_rumors/reports/: evaluation_metrics_celebrity_rumors.json  summary.json  training_metrics.json
artifacts/climate_claims/reports/: evaluation_metrics_climate_claims.json  label_quality.md  summary.json  training_metrics.json
artifacts/crypto_scams/reports/: evaluation_metrics_crypto_scams.json  training_metrics.json
artifacts/hustle_scams/reports/: evaluation_metrics_hustle_scams.json  summary.json  training_metrics.json
artifacts/medical_claims/reports/: evaluation_metrics_medical_claims.json  training_metrics.json
artifacts/results/: results_table.md
configs/: ai_hype.yaml  campus_rumor.yaml  celebrity_rumors.yaml  climate_claims.yaml  crypto_scams.yaml  hustle_scams.yaml  medical_claims.yaml
examples/: sample_texts.csv
scripts/: collect_results.py  demo_multi_niche.sh  seed_run.sh
src/: __init__.py
src/data/: clean.py  download_liar.py  label_weak.py  pipeline.py  scrape_sources.py
src/features/: __init__.py  tfidf.py
src/models/: __init__.py  eval.py  eval_niche.py  train.py  train_niche.py  train_unified.py
src/predict/: __init__.py  cli.py
src/utils/: logging.py
tests/: __init__.py  test_data.py  test_features.py  test_label_weak.py  test_models.py  test_predict.py  test_scrape_sources.py  test_security.py
